syntax = "proto3";

package minimal;
option go_package = "github.com/Tereius/apisix_bug_minimal_example";

service Greeter {
  rpc SayHello (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
